# ply-processor-basics

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: google-chat-notification.yml  python-package.yml
data/: .gitignore
data/samples/: hole.FCStd  hole.ply  hole.stl  sample_circle.ply  sample_clustering.ply  stl2ply.py  stl2ply.stl
examples/measuring_center/: README.md  main.py  requirements.txt
ply_processor_basics/: __init__.py
ply_processor_basics/matrix/: __init__.py  get_rotation_from_vectors.py
ply_processor_basics/pcd/: __init__.py  snapshot.py
ply_processor_basics/points/: __init__.py  clip_by_plane.py  clustering.py  detect_hole.py  downsampler.py  get_distances_to_line.py  get_distances_to_plane.py  get_normal_vector.py  rotate_euler.py  transform_to_plane_coordinates.py  transformer.py
ply_processor_basics/points/convex_hull/: __init__.py  detect_circle.py  detect_line.py  detect_plane_edge.py
ply_processor_basics/points/ransac/: __init__.py  detect_circle.py  (+2 more)
ply_processor_basics/stl/: __init__.py  stl2ply.py
ply_processor_basics/vector/: __init__.py  estimate.py  normalize.py
tests/martix/: test_get_rotation_from_vectors.py
tests/pcd/: test_snapshot.py
tests/points/: test_clip_by_plane.py  test_clustering.py  test_detect_hole.py  test_downsampler.py  test_get_distances_to_line.py  test_get_distances_to_plane.py  test_get_normal_vector.py  test_rotate_euler.py  test_snapshot.py  test_transform_to_plane_coordinates.py
tests/stl/: test_stl2ply.py
tests/vector/: test_estimate.py  test_normalize.py
(+6 files in other folders)
